cluster/chrismiller.xyz/site.yaml
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: mysite
  namespace: chrismillerxyz
  labels:
    app: mysite
    service: web
spec:
  replicas: 2
  revisionHistoryLimit: 1
  strategy:
    type: RollingUpdate
    rollingUpdate:
      maxUnavailable: 1
  selector:
    matchLabels:
      app: mysite
  template:
    metadata:
      namespace: chrismillerxyz
      labels:
        app: mysite
        service: web
    spec:
      securityContext:
        runAsUser: 101
        runAsGroup: 101
      containers:
        - name: mysite
          image: ghcr.io/christopherjmiller/chrismiller.xyz:2.4.0@sha256:5f405e5253b92f6a7f9f7a369a339c2d6327d81ea14f211e28fffa8a8ba9dddd
          ports:
            - containerPort: 3000
              protocol: TCP
          livenessProbe:
            httpGet:
              path: /
              port: 3000
            initialDelaySeconds: 10
            periodSeconds: 10
          resources:
            requests:
              memory: 16Mi
              cpu: 10m
            limits:
              memory: 16Mi
              cpu: 10m
          securityContext:
            readOnlyRootFilesystem: true
            runAsUser: 101
            runAsGroup: 101
---
apiVersion: v1
kind: Service
metadata:
  name: mysite
  namespace: chrismillerxyz
  labels:
    service: web
spec:
  ports:
    - port: 80
      targetPort: 3000
      protocol: TCP
      name: http
  selector:
    app: mysite
